--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="Login_preference">com.mk_kadish.mk1_sharedpreferences_Login_preference </string>
     <string name="login_status_preference">com.mk_kadish.mk1_sharedpreferences_login_status_preference</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
 
